--- a/android/app/src/main/res/layout/activity_chefcuisinier.xml
+++ b/android/app/src/main/res/layout/activity_chefcuisinier.xml
@@ -6,30 +6,60 @@
     android:layout_height="match_parent"
     tools:context=".MenuChefCuisinier">
         <ImageView
-            android:id="@+id/imagesAccueil"
+            android:id="@+id/accueil"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="32dp"
             android:src="@drawable/accueil"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="0dp" />
 
-        <ListView
-        android:id="@+id/listViewClasses"
-        android:layout_width="225dp"
-        android:layout_height="250dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imagesAccueil"/>
+        <TextView
+            android:id="@+id/textIdentification"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:gravity="center"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/accueil" />
 
         <Button
-        android:id="@+id/buttonQuitterClasses"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Quitter"
-        android:textSize="18dp"
-        android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@+id/listViewClasses"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+            android:id="@+id/btnLesPlats"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Les plats"
+            android:textSize="18dp"
+            android:layout_marginTop="50dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textIdentification" />
+
+        <Button
+            android:id="@+id/btnLesServices"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Les services"
+            android:textSize="18dp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnLesPlats" />
+
+
+        <Button
+            android:id="@+id/buttonQuitterMenuChefCuisinier"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Quitter"
+            android:textSize="18dp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnLesServices" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
