--- a/android/app/src/main/res/layout/activity_serveur.xml
+++ b/android/app/src/main/res/layout/activity_serveur.xml
@@ -5,16 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MenuServeur">
+
         <ImageView
             android:id="@+id/imagesAccueil"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="32dp"
             android:src="@drawable/accueil"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="0dp" />
 
         <ListView
-        android:id="@+id/listViewClasses"
+        android:id="@+id/listViewPlats"
         android:layout_width="225dp"
         android:layout_height="250dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -22,13 +24,13 @@
         app:layout_constraintTop_toBottomOf="@+id/imagesAccueil"/>
 
         <Button
-        android:id="@+id/buttonQuitterClasses"
+        android:id="@+id/buttonQuitterServeur"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Quitter"
         android:textSize="18dp"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@+id/listViewClasses"
+        app:layout_constraintTop_toBottomOf="@+id/listViewPlats"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
